# superstruct

./: CONTRIBUTING.md  Cargo.toml  README.md  SESSION_SUMMARY.md  pyproject.toml
benchmarks/: run_benchmarks.py
docs/use_cases/: 01-ecommerce-product-search.md  02-game-server-spatial-matchmaking.md  03-customer-data-explorer.md  README.md
examples/: benchmark.rs  demo.py  heavy_benchmark.rs
src/: core.rs  graph.rs  lib.rs  planner.rs  primary.rs  query.rs  value.rs  workload.rs
src/index/: base.rs  hash.rs  inverted.rs  mod.rs  ngram.rs  sorted.rs  spatial.rs  trie.rs
src/sketch/: bloom.rs  countmin.rs  mod.rs
superstruct/: __init__.py  core.py  graph.py  planner.py  primary.py  query.py  workload.py
superstruct/indexes/: __init__.py  base.py  hash_index.py  inverted_index.py  ngram_index.py  sorted_index.py  trie_index.py
superstruct/sketches/: __init__.py  bloom.py  countmin.py
tests/: integration_test.rs  test_concurrency.py  test_core.py  test_graph.py  test_indexes.py  test_persistence.py  test_sketches.py  test_stress.py  test_text.py
