[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superstruct"
version = "0.1.0"
description = "Adaptive in-memory polyindex. The data structure that contains all the data structures."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["superstruct*"]
